--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -44,21 +44,20 @@ body {
 }
 
 input {
+  background-color: rgba(0,0,0,.2);
   font-family: 'Roboto', sans-serif;
   font-size: 80px;
   font-weight: 300;
   color: #f05167;
   text-shadow: 2px 2px rgba(0,0,0,.3);
-  background-color: rgba(0,0,0,.2);
+  text-align: center;
   border: none;
+  border-radius: 20px;
   width: 100%;
   max-width: 400px;
-  text-align: center;
-  border-radius: 20px;
-  display: inline-block;
   padding: 10px 20px;
-  margin-top: 5px;
-  margin-bottom: 20px;
+  margin: 5px auto 20px auto;
+  display: block;
   box-sizing: border-box;
 
   @include whenmax(440px) {
