Add slider. Fix NaN/Infinites

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -43,6 +43,17 @@ body {
   padding: 0 20px;
 }
 
+.field {
+  margin: 0 auto;
+  max-width: 400px;
+}
+
+.slider {
+  padding-top: 20px;
+  height: 30px;
+  width: 100%;
+}
+
 input {
   background-color: rgba(0,0,0,.2);
   font-family: 'Roboto', sans-serif;
